Rename package to flatten.js to avoid npm naming conflict

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Aron Carroll <code@aroncarroll.com> (http://aroncarroll.com/)",
-  "name": "flatten",
+  "name": "flatten.js",
   "description": "Inflate and deflate nested objects",
   "version": "0.1.0",
   "homepage": "https://github.com/aron/flatten.js",
